--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="container">
       <h1>JavaScript Accordion</h1>
-      <p class="tagline">Cool facts about JavaScript</p>
+      <p class="accordion__tagline">Cool facts about JavaScript</p>
     </div>
   </header>
 
