--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="accordion">
         <div class="accordion__item">
-          <div class="accordion__heading">
+          <div class="accordion__header">
             <p class="accordion__question">When was JavaScript created?</p>
             <span class="accordion__icon">+</span>
           </div>
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="accordion__item">
-          <div class="accordion__heading">
+          <div class="accordion__header">
             <p class="accordion__question">Who created JavaScript?</p>
             <span class="accordion__icon">+</span>
           </div>
