--- a/My-Attempt/index.html
+++ b/My-Attempt/index.html
@@ -1,14 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Adam Hauze">
-  <meta name="description" content="The purpose of this webpage is to practice building an accordion web component using html, css, and vanilla JS.">
+  <meta name="description"
+    content="The purpose of this webpage is to practice building an accordion web component using html, css, and vanilla JS.">
   <title>My Accordion Component</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+  <div class="container">
+    <div class="accordion">
+      <div class="accordion__header">
+        <h1 class="accordion__title">Saitama FAQ Accordion Web Component</h1>
+        <p class="accordion__tagline">Fun facts about One Punch Man</p>
+        <a href="https://gifs.alphacoders.com/gifs/view/207963"><img
+            src="https://giffiles.alphacoders.com/207/207963.gif"></a>
+      </div>
+      <div class="accordion__body">
+        <div class="accordion__item">
+          <div class="accordion__question">
+            <p>How did Saitama get his unparalleled powers?</p>
+            <span class="accordion__icon">+</span>
+          </div>
+          <div class="accordion__answer">
+            <p>An intense exercise regimen.</p>
+          </div>
+        </div>
+        <div class="accordion__item">
+          <div class="accordion__question">
+            <p>What is the secret to his intense exercise regimen?</p>
+            <span class="accordion__icon">+</span>
+          </div>
+          <div class="accordion__answer">
+            <p>100 push-ups, 100 sit-ups, 100 squats, and a 10km run. EVERY SINGLE DAY!!!</p>
+          </div>
+        </div>
+        <div class="accordion__item">
+          <div class="accordion__question">
+            <p>Why is Saitama bald?</p>
+            <span class="accordion__icon">+</span>
+          </div>
+          <div class="accordion__answer">
+            <p>He literally trained so hard he lost all his hair.</p>
+          </div>
+        </div>
+        <div class="accordion__item">
+          <div class="accordion__question">
+            <p>What does Saitama hate more than missing bargains at the local market?</p>
+            <span class="accordion__icon">+</span>
+          </div>
+          <div class="accordion__answer">
+            <p>Bugs.</p>
+          </div>
+        </div>
+        <div class="accordion__item">
+          <div class="accordion__question">
+            <p>What are some of his hobbies aside from being an average hero?</p>
+            <span class="accordion__icon">+</span>
+          </div>
+          <div class="accordion__answer">
+            <p>Reading manga! Young Saitama has an entire bookshelf full of comics, and his younger self was a big fan
+              of Mob Pyscho.</p>
+          </div>
+        </div>
+        <div class="accordion__item">
+          <div class="accordion__question">
+            <p>Why does One Punch Man typically interrupt people speaking to him?</p>
+            <span class="accordion__icon">+</span>
+          </div>
+          <div class="accordion__answer">
+            <p>He has limited paitence for long explanations. His ideal word count is 20 or less.</p>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <p>Written with HTML, CSS, and vanilla JS by <a href="https://hyperstylescript.com">Adam Hauze</a>.</p>
+      </footer>
+    </div>
+  </div>
   <script src="app.js"></script>
 </body>
+
 </html>
