--- a/My-Attempt/index.html
+++ b/My-Attempt/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Adam Hauze">
   <meta name="description"
     content="The purpose of this webpage is to practice building an accordion web component using html, css, and vanilla JS.">
-  <title>My Accordion Component</title>
+  <title>Saitama FAQ Accordion</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="accordion">
       <div class="accordion__header">
-        <h1 class="accordion__title">Saitama FAQ Accordion Web Component</h1>
+        <h1 class="accordion__title">Saitama FAQ Accordion Component</h1>
         <p class="accordion__tagline">Fun facts about One Punch Man</p>
         <a href="https://gifs.alphacoders.com/gifs/view/207963"><img
             src="https://giffiles.alphacoders.com/207/207963.gif"></a>
@@ -32,7 +32,7 @@
         </div>
         <div class="accordion__item">
           <div class="accordion__question">
-            <p>What is the secret to his intense exercise regimen?</p>
+            <p>What's the secret to his intense exercise regimen?</p>
             <span class="accordion__icon">+</span>
           </div>
           <div class="accordion__answer">
@@ -69,7 +69,7 @@
         </div>
         <div class="accordion__item">
           <div class="accordion__question">
-            <p>Why does One Punch Man typically interrupt people speaking to him?</p>
+            <p>Why does Saitama typically interrupt people speaking to him?</p>
             <span class="accordion__icon">+</span>
           </div>
           <div class="accordion__answer">
@@ -77,11 +77,11 @@
           </div>
         </div>
       </div>
-      <footer>
-        <p>Written with HTML, CSS, and vanilla JS by <a href="https://hyperstylescript.com">Adam Hauze</a>.</p>
-      </footer>
     </div>
   </div>
+  <footer>
+    <p>Written with HTML, CSS, and vanilla JS by <a href="https://hyperstylescript.com">Adam Hauze</a>.</p>
+  </footer>
   <script src="app.js"></script>
 </body>
 
