Cleaned up featured gif and added some more gifs

--- a/My-Attempt/index.html
+++ b/My-Attempt/index.html
@@ -17,8 +17,7 @@
       <div class="accordion__header">
         <h1 class="accordion__title">Saitama FAQ Accordion Component</h1>
         <p class="accordion__tagline">Fun facts about One Punch Man</p>
-        <a href="https://gifs.alphacoders.com/gifs/view/207963"><img
-            src="https://giffiles.alphacoders.com/207/207963.gif"></a>
+        <img src="https://giffiles.alphacoders.com/207/207963.gif" alt="Gif of Saitama from One Punch Man ignoring the chaos and destruction happening around him.">
       </div>
       <div class="accordion__body">
         <div class="accordion__item">
@@ -54,7 +53,8 @@
             <span class="accordion__icon">+</span>
           </div>
           <div class="accordion__answer">
-            <p>Bugs.</p>
+            <p id="bugs">Bugs</p>
+            <img src="https://giffiles.alphacoders.com/130/13062.gif" alt="Saitama attempting to catch/kill a bugs">
           </div>
         </div>
         <div class="accordion__item">
