Final touches. Added one more gif and refactored some css classes

--- a/My-Attempt/index.html
+++ b/My-Attempt/index.html
@@ -26,7 +26,8 @@
             <span class="accordion__icon">+</span>
           </div>
           <div class="accordion__answer">
-            <p>An intense exercise regimen.</p>
+            <p class="answer">An intense exercise regimen.</p>
+            <img src="https://giffiles.alphacoders.com/207/207990.gif" alt="Gif of Saitama's sparring session with Genos and amazing display of power">
           </div>
         </div>
         <div class="accordion__item">
@@ -53,7 +54,7 @@
             <span class="accordion__icon">+</span>
           </div>
           <div class="accordion__answer">
-            <p id="bugs">Bugs</p>
+            <p class="answer">Bugs</p>
             <img src="https://giffiles.alphacoders.com/130/13062.gif" alt="Saitama attempting to catch/kill a bugs">
           </div>
         </div>
@@ -63,7 +64,7 @@
             <span class="accordion__icon">+</span>
           </div>
           <div class="accordion__answer">
-            <p>Reading manga! Young Saitama has an entire bookshelf full of comics, and his younger self was a big fan
+            <p>Reading manga! Saitama has an entire bookshelf full of comics, and his younger self was a big fan
               of Mob Pyscho.</p>
           </div>
         </div>
